fixed styling on reports and shifts page to limit width of table. fixed error handling on my pages

--- a/emergency-response-ui/src/App.css
+++ b/emergency-response-ui/src/App.css
@@ -2,6 +2,11 @@
   text-align: left;
 }
 
+#tableOverride {
+  max-width: 90%;
+  margin: auto;
+}
+
 .App-home {
   text-align: center;
   align-items: center;
